fixed weird z-index error in Client profile background

--- a/Client-app/src/components/ClientProfile/ClientProfile.css
+++ b/Client-app/src/components/ClientProfile/ClientProfile.css
@@ -1,8 +1,3 @@
-.clientProfile-container {
-  height: 100vh;
-  background-color: #f5f5f5;
-}
-
 .clientProfile-profileCard {
   padding-top: 15px !important;
   position: relative;
